--- a/package.json
+++ b/package.json
@@ -167,5 +167,13 @@
     "eslint": "^9.36.0",
     "sinon": "^21.0.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^27.0.0",
+    "@types/marked": "^6.0.0",
+    "dompurify": "^3.3.0",
+    "jsdom": "^27.0.1",
+    "marked": "^16.4.1"
   }
 }
