--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "24.x",
+    "@types/sinon": "^17.0.4",
     "@types/vscode": "^1.105.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.45.0",
@@ -161,6 +162,7 @@
     "@vscode/test-electron": "^2.5.2",
     "canvas": "^3.2.0",
     "eslint": "^9.36.0",
+    "sinon": "^21.0.0",
     "typescript": "^5.9.3"
   }
 }
