--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -274,6 +274,29 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+            - name: Delete Old Pre-Releases
+              run: |
+                  echo "🧹 Cleaning up old pre-releases..."
+                  
+                  # Get all pre-releases sorted by creation date (newest first)
+                  PRERELEASES=$(gh release list --limit 100 --json tagName,isPrerelease,createdAt --jq '.[] | select(.isPrerelease == true) | .tagName' | sort -r)
+                  
+                  # Skip the first (latest) pre-release
+                  OLD_PRERELEASES=$(echo "$PRERELEASES" | tail -n +2)
+                  
+                  if [ -z "$OLD_PRERELEASES" ]; then
+                    echo "✅ No old pre-releases to delete"
+                  else
+                    echo "🗑️  Deleting old pre-releases:"
+                    for TAG in $OLD_PRERELEASES; do
+                      echo "  - Deleting $TAG"
+                      gh release delete "$TAG" --yes --cleanup-tag || echo "⚠️  Failed to delete $TAG"
+                    done
+                    echo "✅ Old pre-releases cleaned up, kept only: v${{ steps.release.outputs.version }}"
+                  fi
+              env:
+                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     notify-success:
         runs-on: ubuntu-latest
         needs: [pre-release]
